--- a/package.json
+++ b/package.json
@@ -10,5 +10,17 @@
   },
   "engines": {
     "node": "22.x"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.2.6",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@jest/globals": "^30.2.0",
+    "@types/node": "^24.7.2",
+    "husky": "^9.1.7",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
+    "tsc-files": "^1.1.4",
+    "typescript": "^5.9.3"
   }
 }
