--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@types/node": "^24.7.2",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "lint-staged": "^16.2.4",
     "ts-jest": "^29.4.5",
     "tsc-files": "^1.1.4",
     "typescript": "^5.9.3"
+  },
+  "scripts": {
+    "prepare": "husky"
   }
 }
