--- a/package.json
+++ b/package.json
@@ -17,14 +17,25 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@jest/globals": "^30.2.0",
     "@types/node": "^24.7.2",
+    "cross-env": "^10.1.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "lint-staged": "^16.2.4",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.4.5",
+    "tsc-alias": "^1.8.16",
     "tsc-files": "^1.1.4",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "scripts": {
+    "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "dev": "tsx --watch src/main.ts",
+    "start": "node build/main.js",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "biome-check": "biome check --no-errors-on-unmatched",
+    "biome-fix": "npm run biome-check --write",
+    "typecheck": "tsc",
     "prepare": "husky"
   }
 }
