--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^10.1.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "lint-staged": "^16.2.4",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.4.5",
