--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "lint-staged": "^16.2.4",
+    "prisma": "^6.17.1",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.4.5",
     "tsc-alias": "^1.8.16",
@@ -41,7 +42,10 @@
   },
   "dependencies": {
     "@fnando/cpf": "^1.0.2",
+    "@prisma/adapter-pg": "^6.17.1",
+    "@prisma/client": "^6.17.1",
     "http-status-codes": "^2.3.0",
+    "varlock": "^0.0.15",
     "zod": "^4.1.12"
   }
 }
