--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
-    "biome-check": "biome check --no-errors-on-unmatched",
+    "biome-check": "biome check --diagnostic-level=warn --no-errors-on-unmatched",
     "biome-fix": "npm run biome-check --write",
     "typecheck": "tsc",
     "prepare": "husky"
