test: start e2e testing on server

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@jest/globals": "^30.2.0",
+    "@testcontainers/postgresql": "^11.7.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
+    "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
@@ -25,6 +27,7 @@
     "lint-staged": "^16.2.4",
     "prisma": "^6.17.1",
     "rimraf": "^6.0.1",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "tsc-alias": "^1.8.16",
     "tsc-files": "^1.1.4",
@@ -36,6 +39,7 @@
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test-e2e": "cross-env E2E=true npm run test --",
     "biome-check": "biome check --diagnostic-level=warn --no-errors-on-unmatched",
     "biome-fix": "npm run biome-check --write",
     "typecheck": "tsc",
