--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@fnando/cpf": "^1.0.2",
     "@prisma/adapter-pg": "^6.17.1",
     "@prisma/client": "^6.17.1",
+    "dayjs": "^1.11.18",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "phone": "^3.1.67",
     "varlock": "^0.0.15",
     "zod": "^4.1.12"
   }
