--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,16 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql
 
+  redis:
+    container_name: redis
+    image: redis:alpine
+    command: >
+      --requirepass ""
+    ports:
+      - 6379:6379
+    volumes:
+      - redis-data:/data
+
 volumes:
   postgres-data:
+  redis-data:
