feat: add redis client singletor and make prisma client also a singleton

--- a/.env.schema
+++ b/.env.schema
@@ -6,3 +6,5 @@
 PORT=4000
 # @type=string @example=postgres://user:password@localhost:5432/db
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/db
+# @type=string @example=redis://user:password@localhost:6379
+REDIS_URL=redis://localhost:6379
