--- a/.env.schema
+++ b/.env.schema
@@ -8,3 +8,5 @@ PORT=4000
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/db
 # @type=string @example=redis://user:password@localhost:6379
 REDIS_URL=redis://localhost:6379
+# @type=number @example=300
+FARE_TTL=300 # 5 minutes
