--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@jest/globals": "^30.2.0",
     "@testcontainers/postgresql": "^11.7.1",
+    "@testcontainers/redis": "^11.7.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
     "@types/supertest": "^6.0.3",
