--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@jest/globals": "^30.2.0",
     "@testcontainers/postgresql": "^11.7.1",
     "@testcontainers/redis": "^11.7.1",
+    "@types/amqplib": "^0.10.7",
     "@types/express": "^5.0.3",
     "@types/node": "^24.8.1",
     "@types/supertest": "^6.0.3",
@@ -51,6 +52,7 @@
     "@prisma/adapter-pg": "^6.17.1",
     "@prisma/client": "^6.17.1",
     "@redis/client": "^5.8.3",
+    "amqplib": "^0.10.9",
     "dayjs": "^1.11.18",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
