feat: add receipt path to ENV

--- a/.env.schema
+++ b/.env.schema
@@ -12,3 +12,5 @@ REDIS_URL=redis://localhost:6379
 BROKER_URL=amqp://localhost:5672
 # @type=number @example=300
 FARE_TTL=300 # 5 minutes
+# @type=string @example=./tmp
+RECEIPT_DIR=./tmp
