--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@redis/client": "^5.8.3",
     "@scalar/express-api-reference": "^0.8.22",
     "amqplib": "^0.10.9",
+    "awilix": "^12.0.5",
     "dayjs": "^1.11.18",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
