chore: pin service image versions and add healthcheck to them

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ name: case-tecnico-arkmeds
 services:
   postgres:
     container_name: postgres
-    image: postgres:alpine
+    image: postgres:18.0-alpine
     ports:
       - 5432:5432
     environment:
@@ -11,24 +11,38 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - postgres-data:/var/lib/postgresql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
   redis:
     container_name: redis
-    image: redis:alpine
+    image: redis:8.2.2-alpine
     command: >
       --requirepass ""
     ports:
       - 6379:6379
     volumes:
       - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
   rabbitmq:
-    image: rabbitmq:management-alpine
+    image: rabbitmq:4.1.4-alpine
     ports:
-      - "15672:15672"
       - "5672:5672"
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
 volumes:
   postgres-data:
