--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/amqplib": "^0.10.7",
     "@types/express": "^5.0.3",
     "@types/node": "^24.8.1",
+    "@types/serve-index": "^1.9.4",
     "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
     "husky": "^9.1.7",
@@ -60,6 +61,7 @@
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "phone": "^3.1.67",
+    "serve-index": "^1.9.1",
     "varlock": "^0.0.15",
     "zod": "^4.1.12"
   }
