--- a/.env.schema
+++ b/.env.schema
@@ -14,3 +14,5 @@ BROKER_URL=amqp://localhost:5672
 FARE_TTL=300 # 5 minutes
 # @type=string @example=./tmp
 RECEIPT_DIR=./tmp
+# @type=enum(dev, prod)
+API_ENV=dev
