--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
-    "test-e2e": "cross-env E2E=true npm run test --",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
+    "test-e2e": "cross-env E2E=true npm run test -- --coverage",
     "biome-check": "biome check --diagnostic-level=warn --no-errors-on-unmatched",
     "biome-fix": "npm run biome-check --write",
     "typecheck": "tsc",
@@ -61,6 +61,7 @@
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "phone": "^3.1.67",
+    "pino": "^10.1.0",
     "serve-index": "^1.9.1",
     "varlock": "^0.0.15",
     "zod": "^4.1.12"
