--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "lint-staged": "^16.2.4",
+    "pino-pretty": "^13.1.2",
     "prisma": "^6.17.1",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.4",
@@ -40,7 +41,7 @@
   },
   "scripts": {
     "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
-    "dev": "tsx --watch src/main.ts",
+    "dev": "tsx --watch src/main.ts | pino-pretty",
     "start": "node build/main.js",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
     "test-e2e": "cross-env E2E=true npm run test -- --coverage",
